--- a/pintar.html
+++ b/pintar.html
@@ -16,15 +16,22 @@
         <label for="lineWidth">Espessura: </label>
         <input type="number" id="lineWidth" min="1" max="20" step="1" value="5">
     </div>
+    <div>
+        <button id="toggleMode">Alternar Modo</button>
+    </div>
+    <div>
+        <p id="modeIndicator">Modo: Lápis</p>
+    </div>
     <canvas id="canvas"></canvas>
     <script>
-      const canvas = document.getElementById('canvas');
+        const canvas = document.getElementById('canvas');
 const ctx = canvas.getContext('2d');
 
 canvas.width = 800;
 canvas.height = 600;
 
 let painting = false;
+let isEraserMode = false;
 
 function startPosition(e) {
     painting = true;
@@ -41,13 +48,29 @@ function draw(e) {
 
     ctx.lineWidth = document.getElementById('lineWidth').value;
     ctx.lineCap = 'round';
-    ctx.strokeStyle = document.getElementById('colorPicker').value;
+
+    if (isEraserMode) {
+        ctx.strokeStyle = 'white';
+    } else {
+        ctx.strokeStyle = document.getElementById('colorPicker').value;
+    }
 
     ctx.lineTo(e.clientX - canvas.offsetLeft, e.clientY - canvas.offsetTop);
     ctx.stroke();
     ctx.beginPath();
     ctx.moveTo(e.clientX - canvas.offsetLeft, e.clientY - canvas.offsetTop);
 }
+
+document.getElementById('toggleMode').addEventListener('click', () => {
+    isEraserMode = !isEraserMode;
+    if (isEraserMode) {
+        document.getElementById('toggleMode').textContent = 'Modo Lápis';
+        document.getElementById('modeIndicator').textContent = 'Modo: Borracha';
+    } else {
+        document.getElementById('toggleMode').textContent = 'Modo Borracha';
+        document.getElementById('modeIndicator').textContent = 'Modo: Lápis';
+    }
+});
 
 canvas.addEventListener('mousedown', startPosition);
 canvas.addEventListener('mouseup', endPosition);
