--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </section>
       <section id="jogos">
         <h2>Jogos</h2>
-        <!-- Lista de jogos aqui -->
+        <a href="./pintar"><h3>Pintar</h3></a>
       </section>
     </main>
     <footer>
