--- a/pintar.html
+++ b/pintar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo de Lousa de Pintar</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"><div>rev</div>
 </head>
 <body>
     <h1>Jogo de Lousa de Pintar</h1>
